Basic mongoose test. Not integrated into mocha.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies" : {
     "async": "^1.5.0",
     "lodash": "^3.10.1",
-    "node-xlsx": "https://github.com/Moblox/node-xlsx.git"
+    "node-xlsx": "https://github.com/Moblox/node-xlsx.git",
+    "mongoose" : "^4.3.7"
   }
 }
