update version of node-xlsx dependency

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/Moblox/mongo-xlsx#readme",
   "dependencies": {
-    "node-xlsx": "https://github.com/Moblox/node-xlsx.git"
+    "node-xlsx": "*"
   },
   "devDependencies" : {
     "async": "^1.5.0",
     "lodash": "^3.10.1",
-    "node-xlsx": "https://github.com/Moblox/node-xlsx.git",
+    "node-xlsx": "*",
     "mongoose" : "^4.3.7"
   }
 }
